--- a/proje/Views/Home/AnaSayfa.cshtml
+++ b/proje/Views/Home/AnaSayfa.cshtml
@@ -1,10 +1,91 @@
-﻿<head>
-    <link rel="stylesheet" href="~/css/AnaSayfa.css" />
-</head>
+﻿<link rel="stylesheet" href="~/css/AnaSayfa.css" />
+
 
 
 <div class="resim-kutu">
-    <img src="~/images/1.jpg" />
-    <a class="yazi" asp-controller="Home" asp-action="Yonlendir">DETAY</a>
+    <img src="~/images/1.jpg" alt="Resim">
+    <a href="/Home/Yonlendir" class="yazi">KENDİNİ KEŞFETMEYE HAZIR MISIN?</a>
 </div>
 
+
+<div class="hizmetler-wrapper">
+<div class="hizmetler-container">
+
+    <div class="kart">
+            <a href="/Home/Yonlendir">
+        <img src="~/images/grup.jpg" alt="Grup Dersleri">
+            </a>
+        <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+            <h3>Grup Dersleri</h3>
+            </a>
+            <p>Arkadaşlarınla beraber hem vakit geçirin hem de kendinize iyi bakın</p>
+        </div>
+    </div>
+
+    <div class="kart">
+            <a href="/Home/Yonlendir">
+        <img src="~/images/bireysel.jpg" alt="Kişisel Antrenman">
+        </a>
+        <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+            <h3>Kişisel Antrenman</h3>
+            </a>
+            <p>Uzman kadın antrenörlerimiz eşliğinde hedeflerinize yönelik özel programlarla daha hızlı sonuç alın.</p>
+        </div>
+    </div>
+
+    <div class="kart">
+            <a href="/Home/Yonlendir">
+        <img src="~/images/beslenme.jpg" alt="Beslenme Danışmanlığı"> </a>
+        <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+            <h3>Beslenme Danışmanlığı</h3></a>
+            <p>Spor rutininizi destekleyecek, sürdürülebilir ve sağlıklı beslenme planları oluşturuyoruz.</p>
+        </div>
+    </div>
+
+</div>
+</div>
+
+<div class="hizmetler-wrapper">
+    <div class="hizmetler-container">
+
+        <div class="kart">
+            <a href="/Home/Yonlendir">
+                <img src="~/images/pilates.jpg" alt="Yoga/Plates Dersleri">
+            </a>
+            <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+                    <h3>Yoga/Plates Dersleri</h3>
+                </a>
+                <p>Yoga, Pilates ve Zumba derslerimizle hem sosyalleşin hem de enerjinizi en üst seviyeye çıkarın.</p>
+            </div>
+        </div>
+
+        <div class="kart">
+            <a href="/Home/Yonlendir">
+                <img src="~/images/zumba.jpg" alt="Zumba Dersleri">
+            </a>
+            <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+                    <h3>Zumba Dersleri</h3>
+                </a>
+                <p>Hem dans edip hem zayıflamak isteyenlere</p>
+            </div>
+        </div>
+
+        <div class="kart">
+            <a href="/Home/Yonlendir">
+                <img src="~/images/bağlantı.jpg" alt="Yeni Kişilerle Tanış">
+            </a>
+            <div class="kart-icerik">
+                <a href="/Home/Yonlendir">
+                    <h3>Yeni Kişilerle Tanış</h3>
+                </a>
+                <p>Seninle aynı amacı olan kişilerle tanışıp konuşabilirsin grup dersleri ve etkinlikler sayesinde</p>
+            </div>
+        </div>
+
+    </div>
+</div>
