--- a/proje/Views/Home/AnaSayfa.cshtml
+++ b/proje/Views/Home/AnaSayfa.cshtml
@@ -5,6 +5,6 @@
 
 <div class="resim-kutu">
     <img src="~/images/1.jpg" />
-    <a class="yazi" asp-area="Identity" asp-page="/Account/Register">DETAY</a>
+    <a class="yazi" asp-controller="Home" asp-action="Yonlendir">DETAY</a>
 </div>
 
