--- a/proje/Views/Home/AnaSayfa.cshtml
+++ b/proje/Views/Home/AnaSayfa.cshtml
@@ -41,7 +41,7 @@
         <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
             <h3>Beslenme Danışmanlığı</h3></a>
-            <p>Spor rutininizi destekleyecek, sürdürülebilir ve sağlıklı beslenme planları oluşturuyoruz.</p>
+            <p>Spor rutininizii destekleyecek, sürdürülebilir ve sağlıklı beslenme planları oluşturuyoruz.</p>
         </div>
     </div>
 
