--- a/proje/Views/Home/AnaSayfa.cshtml
+++ b/proje/Views/Home/AnaSayfa.cshtml
@@ -1,5 +1,16 @@
 ﻿<link rel="stylesheet" href="~/css/AnaSayfa.css" />
 
+<div class="reklam reklam-sol">
+    <a href="/Home/Reklam1">
+        <img src="~/images/reklam1.jpg" alt="Reklam Sol">
+    </a>
+</div>
+
+<div class="reklam reklam-sag">
+    <a href="/Home/Reklam2">
+        <img src="~/images/reklam2.jpg" alt="Reklam Sağ">
+    </a>
+</div>
 
 
 <div class="resim-kutu">
@@ -88,4 +99,8 @@
         </div>
 
     </div>
+</div>
+
+<div class="resim-kutu">
+    <a href="/Home/Yonlendir"><img src="~/images/bitiş.jpg" alt="Resim"></a>
 </div>
