--- a/proje/Views/Shared/_Layout.cshtml
+++ b/proje/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Ekipmanlar">Ekipmanlar</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Randevu" asp-action="Index">Randevu Al</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
