--- a/proje/Views/Home/AnaSayfa.cshtml
+++ b/proje/Views/Home/AnaSayfa.cshtml
@@ -1,20 +1,20 @@
 ﻿<link rel="stylesheet" href="~/css/AnaSayfa.css" />
 
 <div class="reklam reklam-sol">
-    <a href="/Home/Reklam1">
-        <img src="~/images/reklam1.jpg" alt="Reklam Sol">
+    <a href="https://www.trendyol.com/spor-aletleri-x-c104192" target="_blank">
+        <img src="~/images/anaSayfa/reklam1.jpg" alt="Reklam Sol">
     </a>
 </div>
 
 <div class="reklam reklam-sag">
-    <a href="/Home/Reklam2">
-        <img src="~/images/reklam2.jpg" alt="Reklam Sağ">
+    <a href="https://www.yemeksepeti.com/restaurants/new?lng=29.010804&lat=41.076703&vertical=restaurants" target="_blank">
+        <img src="~/images/anaSayfa/reklam2.jpg" alt="Reklam Sağ">
     </a>
 </div>
 
 
 <div class="resim-kutu">
-    <img src="~/images/1.jpg" alt="Resim">
+    <img src="~/images/anaSayfa/1.jpg" alt="Resim">
     <a href="/Home/Yonlendir" class="yazi">KENDİNİ KEŞFETMEYE HAZIR MISIN?</a>
 </div>
 
@@ -24,7 +24,7 @@
 
     <div class="kart">
             <a href="/Home/Yonlendir">
-        <img src="~/images/grup.jpg" alt="Grup Dersleri">
+                <img src="~/images/anaSayfa/grup.jpg" alt="Grup Dersleri">
             </a>
         <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
@@ -36,7 +36,7 @@
 
     <div class="kart">
             <a href="/Home/Yonlendir">
-        <img src="~/images/bireysel.jpg" alt="Kişisel Antrenman">
+                <img src="~/images/anaSayfa/bireysel.jpg" alt="Kişisel Antrenman">
         </a>
         <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
@@ -48,7 +48,8 @@
 
     <div class="kart">
             <a href="/Home/Yonlendir">
-        <img src="~/images/beslenme.jpg" alt="Beslenme Danışmanlığı"> </a>
+                <img src="~/images/anaSayfa/beslenme.jpg" alt="Beslenme Danışmanlığı">
+            </a>
         <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
             <h3>Beslenme Danışmanlığı</h3></a>
@@ -64,7 +65,7 @@
 
         <div class="kart">
             <a href="/Home/Yonlendir">
-                <img src="~/images/pilates.jpg" alt="Yoga/Plates Dersleri">
+                <img src="~/images/anaSayfa/pilates.jpg" alt="Yoga/Plates Dersleri">
             </a>
             <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
@@ -76,7 +77,7 @@
 
         <div class="kart">
             <a href="/Home/Yonlendir">
-                <img src="~/images/zumba.jpg" alt="Zumba Dersleri">
+                <img src="~/images/anaSayfa/zumba.jpg" alt="Zumba Dersleri">
             </a>
             <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
@@ -88,7 +89,7 @@
 
         <div class="kart">
             <a href="/Home/Yonlendir">
-                <img src="~/images/bağlantı.jpg" alt="Yeni Kişilerle Tanış">
+                <img src="~/images/anaSayfa/bağlantı.jpg" alt="Yeni Kişilerle Tanış">
             </a>
             <div class="kart-icerik">
                 <a href="/Home/Yonlendir">
@@ -102,5 +103,195 @@
 </div>
 
 <div class="resim-kutu">
-    <a href="/Home/Yonlendir"><img src="~/images/bitiş.jpg" alt="Resim"></a>
+    <a href="/Home/Yonlendir"><img src="~/images/anaSayfa/son.jpg" alt="Resim"></a>
 </div>
+
+<section class="yorumlar">
+    <h2>Kullanıcı Yorumları</h2>
+
+    <div class="yorum-slider">
+        <div class="yorumlar-track">
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen1.jpg" alt="Ayşe K.">
+                <p>“Queen’e başladığımdan beri hem fiziksel hem mental olarak çok güçlendim.”</p>
+                <span>Ayşe K.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen2.jpg" alt="Elif T.">
+                <p>“Tam anlamıyla kadınlara özel, güvenli ve motive edici bir ortam.”</p>
+                <span>Elif T.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen3.jpg" alt="Zeynep A.">
+                <p>“Antrenörlerin ilgisi ve enerjisi harika, kendimi çok özel hissediyorum.”</p>
+                <span>Zeynep A.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen4.jpg" alt="Merve S.">
+                <p>“Queen tam anlamıyla motivasyon kaynağım oldu.”</p>
+                <span>Merve S.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen5.jpg" alt="Buse Y.">
+                <p>“Kadın kadına spor yapmanın özgüveni bambaşka.”</p>
+                <span>Buse Y.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen6.jpg" alt="Ceren D.">
+                <p>“Temizliği, düzeni ve enerjisiyle favori salonum.”</p>
+                <span>Ceren D.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen7.jpg" alt="Selin G.">
+                <p>“Queen’de spor yapmak gerçekten keyif.”</p>
+                <span>Selin G.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen8.jpg" alt="İrem P.">
+                <p>“Kendime ayırdığım en güzel zaman Queen saatlerim.”</p>
+                <span>İrem P.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen9.jpg" alt="Dilan M.">
+                <p>“Hedeflerime Queen sayesinde ulaşıyorum.”</p>
+                <span>Dilan M.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen10.jpg" alt="Ece K.">
+                <p>“Hem spor hem sosyalleşme için mükemmel.”</p>
+                <span>Ece K.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen11.jpg" alt="Gamze L.">
+                <p>“Kadınlara özel olması beni çok rahat hissettiriyor.”</p>
+                <span>Gamze L.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen12.jpg" alt="Aslı N.">
+                <p>“Her dersten sonra kendimi daha güçlü hissediyorum.”</p>
+                <span>Aslı N.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen13.jpg" alt="Melisa R.">
+                <p>“Queen tam anlamıyla ‘iyi ki’ dediğim bir yer.”</p>
+                <span>Melisa R.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen14.jpg" alt="Nisa Ö.">
+                <p>“Kendime güvenim Queen’de başladı.”</p>
+                <span>Nisa Ö.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen15.jpg" alt="Şeyma B.">
+                <p>“Sporu sevdiren bir salon varsa o da Queen.”</p>
+                <span>Şeyma B.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen1.jpg" alt="Ayşe K.">
+                <p>“Queen’e başladığımdan beri hem fiziksel hem mental olarak çok güçlendim.”</p>
+                <span>Ayşe K.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen2.jpg" alt="Elif T.">
+                <p>“Tam anlamıyla kadınlara özel, güvenli ve motive edici bir ortam.”</p>
+                <span>Elif T.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen3.jpg" alt="Zeynep A.">
+                <p>“Antrenörlerin ilgisi ve enerjisi harika, kendimi çok özel hissediyorum.”</p>
+                <span>Zeynep A.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen4.jpg" alt="Merve S.">
+                <p>“Queen tam anlamıyla motivasyon kaynağım oldu.”</p>
+                <span>Merve S.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen5.jpg" alt="Buse Y.">
+                <p>“Kadın kadına spor yapmanın özgüveni bambaşka.”</p>
+                <span>Buse Y.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen6.jpg" alt="Ceren D.">
+                <p>“Temizliği, düzeni ve enerjisiyle favori salonum.”</p>
+                <span>Ceren D.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen7.jpg" alt="Selin G.">
+                <p>“Queen’de spor yapmak gerçekten keyif.”</p>
+                <span>Selin G.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen8.jpg" alt="İrem P.">
+                <p>“Kendime ayırdığım en güzel zaman Queen saatlerim.”</p>
+                <span>İrem P.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen9.jpg" alt="Dilan M.">
+                <p>“Hedeflerime Queen sayesinde ulaşıyorum.”</p>
+                <span>Dilan M.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen10.jpg" alt="Ece K.">
+                <p>“Hem spor hem sosyalleşme için mükemmel.”</p>
+                <span>Ece K.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen11.jpg" alt="Gamze L.">
+                <p>“Kadınlara özel olması beni çok rahat hissettiriyor.”</p>
+                <span>Gamze L.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen12.jpg" alt="Aslı N.">
+                <p>“Her dersten sonra kendimi daha güçlü hissediyorum.”</p>
+                <span>Aslı N.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen13.jpg" alt="Melisa R.">
+                <p>“Queen tam anlamıyla ‘iyi ki’ dediğim bir yer.”</p>
+                <span>Melisa R.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen14.jpg" alt="Nisa Ö.">
+                <p>“Kendime güvenim Queen’de başladı.”</p>
+                <span>Nisa Ö.</span>
+            </div>
+
+            <div class="yorum-kart">
+                <img src="~/images/yorumlar/queen15.jpg" alt="Şeyma B.">
+                <p>“Sporu sevdiren bir salon varsa o da Queen.”</p>
+                <span>Şeyma B.</span>
+            </div>
+
+        </div>
+    </div>
+</section>
