--- a/proje/wwwroot/css/AnaSayfa.css
+++ b/proje/wwwroot/css/AnaSayfa.css
@@ -33,6 +33,8 @@ a {
         display: block;
     }
 
+
+
 .yazi {
     position: absolute;
     bottom: 70px;
@@ -127,3 +129,74 @@ a {
         opacity: 1;
     }
 }
+
+/* Genel alan */
+.yorumlar {
+    background: white;
+    padding: 60px 20px;
+    text-align: center;
+}
+
+    .yorumlar h2 {
+        margin-bottom: 40px;
+    }
+
+/* Slider pencere */
+.yorum-slider {
+    overflow: hidden;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+/* Kaydırılan alan */
+.yorumlar-track {
+    display: flex;
+    gap: 30px;
+    animation: kaydir 20s linear infinite;
+}
+
+/* Kart */
+.yorum-kart {
+    min-width: 300px;
+    background: #fff0f5;
+    padding: 25px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+    /* Resim */
+    .yorum-kart img {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-bottom: 15px;
+    }
+
+    /* Yazı */
+    .yorum-kart p {
+        font-style: italic;
+        margin-bottom: 10px;
+    }
+
+    /* İsim */
+    .yorum-kart span {
+        font-weight: bold;
+    }
+
+/* Animasyon */
+@keyframes kaydir {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+/* Hover olunca dursun (çok profesyonel detay) */
+/*.yorum-slider:hover .yorumlar-track {
+    animation-play-state: paused;
+}
+    */
