--- a/proje/Views/Shared/_Layout.cshtml
+++ b/proje/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Randevu" asp-action="Index">Randevu Al</a>
                         </li>
+                         @if (User.Identity.IsAuthenticated)
+    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Musteri" asp-action="Profilim">Profilim</a>
+                        </li>
+    }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
